# neo4j-llm-course

./: README.md  pyproject.toml
neo4j_llm_course/: neo4j_cypher_generation.py  neo4j_llm_fundamentals.py  neo4j_vector_store.py
